[package]
name = "vonneumann"
version = "1.0.1"
edition = "2021"

keywords = ["executable", "memory", "windows", "unix"]
categories = ["memory-management", "no-std"]

description = "executable memory for windows and unix"
license = "MIT"
readme = "README.md"
repository = "https://github.com/jyn514/VonNeumann"

[features]
# enables support for `std::alloc::Allocator`
nightly = []

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2" }
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["memoryapi", "winnt", "sysinfoapi"] }

[dev-dependencies]
