[package]
name = "vonneumann"
version = "1.0.2"
edition = "2021"

keywords = ["executable", "memory", "windows", "unix"]
categories = ["memory-management", "no-std"]

description = "executable memory for windows and unix"
license = "MIT"
readme = "README.md"
repository = "https://github.com/jyn514/Von-Neumann"

[features]
# enables support for `std::alloc::Allocator`
nightly = []

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2", default-features = false }
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", default-features = false, features = ["memoryapi", "winnt", "sysinfoapi"] }

[package.metadata.docs.rs]
all-features = true
